# RagFlow

./: .env.example  .gitignore  QUICKSTART.md  README.md  example.py  pyproject.toml
src/: __init__.py  main.py
src/chunking/: __init__.py  chunker.py
src/embedding/: __init__.py  embedder.py
src/generator/: __init__.py  lm_studio_client.py
src/orchestrator/: __init__.py  rag_orchestrator.py
src/retriever/: __init__.py  retriever.py
src/vectorstore/: __init__.py  chroma_store.py
