[project]
name = "ragflow"
version = "0.1.0"
description = "RagFlow - Custom RAG system with LM Studio integration"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.7.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

